[build-system]
requires = [
    'setuptools>=74',
]
build-backend = 'build-backend'
backend-path = ['.']

[project]
name = 'Djblets'
description = 'A collection of useful classes and functions for developing large-scale Django-based web applications.'
authors = [
    {name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com'},
]
license = { text = 'MIT' }
readme = 'README.rst'
requires-python = '>=3.10'
dynamic = ['dependencies', 'version']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
]


[project.urls]
Homepage = 'https://github.com/djblets/djblets'
Documentation = 'https://github.com/djblets/djblets'
Repository = 'https://github.com/djblets/djblets'
Support = 'https://www.reviewboard.org/support/'


[tool.pytest]
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
norecursedirs = ["djblets/htdocs"]
testpaths = ["djblets"]

addopts = ["--reuse-db"]

# Require the following plugins
required_plugins = [
    "pytest-django",
    "pytest-env",
]

DJANGO_SETTINGS_MODULE = "tests.settings"


[tool.setuptools.package-data]
djblets = ['py.typed']


[tool.setuptools.packages.find]
where = ['.']
include = ['djblets*']
namespaces = false


[tool.setuptools.dynamic]
dependencies = { file = 'package-requirements.txt' }
version = { attr = 'djblets.__version__' }
