[build-system]
requires = [
    'buildthings~=1.0',
]
build-backend = 'buildthings.backend'

[project]
name = 'Djblets'
description = 'A collection of useful classes and functions for developing large-scale Django-based web applications.'
authors = [
    {name = 'Beanbag, Inc.', email = 'questions@beanbaginc.com'},
]

# Switch to the modern fields once we drop Python 3.8 support.
#license = 'MIT'
#license-files = ['COPYING']
license = { text = 'MIT' }

readme = 'README.rst'
requires-python = '>=3.10'
dynamic = ['dependencies', 'version']

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
]


[project.urls]
Homepage = 'https://github.com/djblets/djblets'
Documentation = 'https://github.com/djblets/djblets'
Repository = 'https://github.com/djblets/djblets'
Support = 'https://www.reviewboard.org/support/'


[tool.pytest]
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
norecursedirs = ["djblets/htdocs"]
testpaths = ["djblets"]

addopts = ["--reuse-db"]

# Require the following plugins
required_plugins = [
    "pytest-django",
    "pytest-env",
]

DJANGO_SETTINGS_MODULE = "tests.settings"


[tool.setuptools.package-data]
djblets = ['py.typed']


[tool.setuptools.packages.find]
where = ['.']
include = ['djblets*']
namespaces = false


[tool.setuptools.dynamic]
version = { attr = 'djblets.__version__' }


[tool.buildthings]
dependencies = { attr = 'djblets.dependencies.build_dependency_list' }


[tool.buildthings.isolation]
# Support .local-packages across all build types for in-development
# deployments.
local-packages-path = '.local-packages'

# We currently require using Djblets as part of the build process, so install
# those dependencies. We will need developer dependencies, as Django Evolution
# is currently defined as an app in djblets/settings.py.
include-dev-deps = true
include-install-deps = true


# Editable build information.
[tool.buildthings.editable.npm]
install = true


# Source distribution build steps.
#
# For source distributions, we'll build static media files.
[tool.buildthings.sdist.npm]
install = true


[[tool.buildthings.sdist.extra-build-steps]]
label = 'Building static media...'
command = './contrib/internal/build-media.py'


[[tool.buildthings.sdist.extra-build-steps]]
label = "Building i18n..."
command = "{python} ./contrib/internal/build-i18n.py"



# Wheel distribution build steps.
#
# For wheel distributions, we'll build static media files.
#
# In the future, we'll want to disable these in order to build from a
# source distribution, which will aid third-parties in consuming our source
# builds.
[tool.buildthings.wheel.npm]
install = true


[[tool.buildthings.wheel.extra-build-steps]]
label = 'Building static media...'
command = './contrib/internal/build-media.py'


[[tool.buildthings.sdist.extra-build-steps]]
label = "Building i18n..."
command = "{python} ./contrib/internal/build-i18n.py"
